minor fix for header text overflow.

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -34,6 +34,7 @@
 }
 .ngHeaderSortColumn{
 	cursor: pointer;
+    overflow: hidden;
 }
 
 .ngHeaderCell {
